@@ -24,6 +24,7 @@ from zope.testing.cleanup import cleanUp
 from Products.CMFCore.tests.base.dummy import DummySite
 from Products.CMFCore.tests.base.dummy import DummyTool
 from Products.CMFCore.tests.base.testcase import SecurityRequestTest
+from Products.CMFCore.tests.base.testcase import WarningInterceptor
 
 #
 #   We have to import these here to make the "ugly sharing" test case go.
@@ -60,9 +61,10 @@ class DummyAction:
                )
 
 
-class ActionProviderBaseTests(SecurityRequestTest):
+class ActionProviderBaseTests(SecurityRequestTest, WarningInterceptor):
 
     def setUp(self):
+        self._trap_warning_output()
         SecurityRequestTest.setUp(self)
         self.site = DummySite('site').__of__(self.root)
         utool = self.site._setObject( 'portal_url', DummyTool() )
@@ -71,6 +73,7 @@ class ActionProviderBaseTests(SecurityRequestTest):
     def tearDown(self):
         cleanUp()
         SecurityRequestTest.tearDown(self)
+        self._free_warning_output()
 
     def _makeProvider( self, dummy=0 ):
 
